@@ -10,10 +10,9 @@ import androidx.annotation.NonNull;
 import androidx.annotation.Nullable;
 import androidx.annotation.WorkerThread;
 
-import com.annimon.stream.Stream;
-
 import org.json.JSONException;
 import org.json.JSONObject;
+import org.signal.core.util.Stopwatch;
 import org.signal.core.util.StreamUtil;
 import org.signal.core.util.concurrent.SignalExecutors;
 import org.signal.core.util.logging.Log;
@@ -23,10 +22,8 @@ import org.signal.debuglogsviewer.DebugLogsViewer;
 import org.thoughtcrime.securesms.database.LogDatabase;
 import org.thoughtcrime.securesms.dependencies.AppDependencies;
 import org.thoughtcrime.securesms.net.StandardUserAgentInterceptor;
-import org.thoughtcrime.securesms.providers.BlobProvider;
 import org.thoughtcrime.securesms.push.SignalServiceNetworkAccess;
 import org.thoughtcrime.securesms.util.RemoteConfig;
-import org.signal.core.util.Stopwatch;
 
 import java.io.IOException;
 import java.io.OutputStream;
@@ -38,7 +35,11 @@ import java.util.Optional;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Future;
+import java.util.concurrent.TimeUnit;
+import java.util.function.Consumer;
 import java.util.regex.Pattern;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 import java.util.zip.GZIPOutputStream;
 import java.util.zip.ZipEntry;
 import java.util.zip.ZipOutputStream;
@@ -83,6 +84,7 @@ public class SubmitDebugLogRepository {
     if (Build.VERSION.SDK_INT >= 28) {
       add(new LogSectionPower());
     }
+    add(new LogSectionBattery());
     add(new LogSectionNotifications());
     add(new LogSectionNotificationProfiles());
     add(new LogSectionExoPlayerPool());
@@ -101,6 +103,7 @@ public class SubmitDebugLogRepository {
     }
     add(new LogSectionDatabaseSchema());
     add(new LogSectionRemappedRecords());
+    add(new LogSectionDatabaseIssues());
     add(new LogSectionAnr());
     add(new LogSectionLogcat());
     add(new LogSectionLoggerHeader());
@@ -114,23 +117,30 @@ public class SubmitDebugLogRepository {
     this.executor = SignalExecutors.SERIAL;
   }
 
-  public void getPrefixLogLines(@NonNull Callback<List<LogLine>> callback) {
-    executor.execute(() -> callback.onResult(getPrefixLogLinesInternal()));
+  public void getPrefixLogLines(@NonNull Consumer<List<LogLine>> callback) {
+    executor.execute(() -> callback.accept(getPrefixLogLinesInternal()));
   }
 
-  public void buildAndSubmitLog(@NonNull Callback<Optional<String>> callback) {
+  public void buildAndSubmitLog(@NonNull Consumer<Optional<String>> callback) {
     SignalExecutors.UNBOUNDED.execute(() -> {
       Log.blockUntilAllWritesFinished();
       LogDatabase.getInstance(context).logs().trimToSize();
-      callback.onResult(submitLogInternal(System.currentTimeMillis(), getPrefixLogLinesInternal(), Tracer.getInstance().serialize()));
+      callback.accept(submitLogInternal(System.currentTimeMillis(), getPrefixLogLinesInternal(), Tracer.getInstance().serialize()));
     });
   }
 
-  public void submitLogFromReader(DebugLogsViewer.LogReader logReader, @Nullable byte[] trace, Callback<Optional<String>> callback) {
-    SignalExecutors.UNBOUNDED.execute(() -> callback.onResult(submitLogFromReaderInternal(logReader, trace)));
+  @WorkerThread
+  public Optional<String> buildAndSubmitLogSync(long untilTime) {
+    Log.blockUntilAllWritesFinished();
+    LogDatabase.getInstance(context).logs().trimToSize();
+    return submitLogInternal(untilTime, getPrefixLogLinesInternal(), Tracer.getInstance().serialize());
   }
 
-  public void writeLogToDisk(@NonNull Uri uri, long untilTime, Callback<Boolean> callback) {
+  public void submitLogFromReader(DebugLogsViewer.LogReader logReader, @Nullable byte[] trace, Consumer<Optional<String>> callback) {
+    SignalExecutors.UNBOUNDED.execute(() -> callback.accept(submitLogFromReaderInternal(logReader, trace)));
+  }
+
+  public void writeLogToDisk(@NonNull Uri uri, long untilTime, Consumer<Boolean> callback) {
     SignalExecutors.UNBOUNDED.execute(() -> {
       try (ZipOutputStream outputStream = new ZipOutputStream(context.getContentResolver().openOutputStream(uri))) {
         StringBuilder prefixLines = linesToStringBuilder(getPrefixLogLinesInternal(), null);
@@ -145,7 +155,7 @@ public class SubmitDebugLogRepository {
           }
         } catch (IllegalStateException e) {
           Log.e(TAG, "Failed to read row!", e);
-          callback.onResult(false);
+          callback.accept(false);
           return;
         }
 
@@ -155,9 +165,9 @@ public class SubmitDebugLogRepository {
         outputStream.write(Tracer.getInstance().serialize());
         outputStream.closeEntry();
 
-        callback.onResult(true);
+        callback.accept(true);
       } catch (IOException e) {
-        callback.onResult(false);
+        callback.accept(false);
       }
     });
   }
@@ -179,10 +189,10 @@ public class SubmitDebugLogRepository {
     try {
 
       ParcelFileDescriptor[] fds        = ParcelFileDescriptor.createPipe();
-      Future<Uri>            futureUri  = BlobProvider.getInstance()
-                                                      .forData(new ParcelFileDescriptor.AutoCloseInputStream(fds[0]), 0)
-                                                      .withMimeType("application/gzip")
-                                                      .createForSingleSessionOnDiskAsync(context);
+      Future<Uri>            futureUri  = AppDependencies.getBlobs()
+                                                         .forData(new ParcelFileDescriptor.AutoCloseInputStream(fds[0]), 0)
+                                                         .withMimeType("application/gzip")
+                                                         .createForSingleSessionOnDiskAsync(context);
 
       OutputStream gzipOutput = new GZIPOutputStream(new ParcelFileDescriptor.AutoCloseOutputStream(fds[1]));
 
@@ -213,12 +223,12 @@ public class SubmitDebugLogRepository {
         }
 
         @Override public long contentLength() {
-          return BlobProvider.getInstance().calculateFileSize(context, gzipUri);
+          return AppDependencies.getBlobs().calculateFileSize(context, gzipUri);
         }
 
         @Override
         public void writeTo(@NonNull BufferedSink sink) throws IOException {
-          Source source = Okio.source(BlobProvider.getInstance().getStream(context, gzipUri));
+          Source source = Okio.source(AppDependencies.getBlobs().getStream(context, gzipUri));
           sink.writeAll(source);
         }
       });
@@ -226,7 +236,7 @@ public class SubmitDebugLogRepository {
       stopwatch.split("upload");
       stopwatch.stop(TAG);
 
-      BlobProvider.getInstance().delete(context, gzipUri);
+      AppDependencies.getBlobs().delete(context, gzipUri);
 
       return Optional.of(logUrl);
     } catch (IOException | RuntimeException | ExecutionException | InterruptedException e) {
@@ -253,10 +263,10 @@ public class SubmitDebugLogRepository {
       Stopwatch stopwatch = new Stopwatch("log-upload");
 
       ParcelFileDescriptor[] fds        = ParcelFileDescriptor.createPipe();
-      Future<Uri>            futureUri  = BlobProvider.getInstance()
-                                                      .forData(new ParcelFileDescriptor.AutoCloseInputStream(fds[0]), 0)
-                                                      .withMimeType("application/gzip")
-                                                      .createForSingleSessionOnDiskAsync(context);
+      Future<Uri>            futureUri  = AppDependencies.getBlobs()
+                                                         .forData(new ParcelFileDescriptor.AutoCloseInputStream(fds[0]), 0)
+                                                         .withMimeType("application/gzip")
+                                                         .createForSingleSessionOnDiskAsync(context);
 
       OutputStream gzipOutput = new GZIPOutputStream(new ParcelFileDescriptor.AutoCloseOutputStream(fds[1]));
 
@@ -286,12 +296,12 @@ public class SubmitDebugLogRepository {
         }
 
         @Override public long contentLength() {
-          return BlobProvider.getInstance().calculateFileSize(context, gzipUri);
+          return AppDependencies.getBlobs().calculateFileSize(context, gzipUri);
         }
 
         @Override
         public void writeTo(@NonNull BufferedSink sink) throws IOException {
-          Source source = Okio.source(BlobProvider.getInstance().getStream(context, gzipUri));
+          Source source = Okio.source(AppDependencies.getBlobs().getStream(context, gzipUri));
           sink.writeAll(source);
         }
       });
@@ -299,7 +309,7 @@ public class SubmitDebugLogRepository {
       stopwatch.split("upload");
       stopwatch.stop(TAG);
 
-      BlobProvider.getInstance().delete(context, gzipUri);
+      AppDependencies.getBlobs().delete(context, gzipUri);
 
       return Optional.of(logUrl);
     } catch (IOException | RuntimeException | ExecutionException | InterruptedException e) {
@@ -310,12 +320,17 @@ public class SubmitDebugLogRepository {
 
   @WorkerThread
   private @NonNull String uploadContent(@NonNull String contentType, @NonNull RequestBody requestBody) throws IOException {
-    OkHttpClient client = new OkHttpClient.Builder().addInterceptor(new StandardUserAgentInterceptor()).dns(SignalServiceNetworkAccess.DNS).build();
+    OkHttpClient client = new OkHttpClient.Builder()
+        .addInterceptor(new StandardUserAgentInterceptor())
+        .dns(SignalServiceNetworkAccess.DNS)
+        .readTimeout(30, TimeUnit.SECONDS)
+        .writeTimeout(30, TimeUnit.SECONDS)
+        .build();
 
     try (Response response = client.newCall(new Request.Builder().url(API_ENDPOINT).get().build()).execute()) {
       ResponseBody body = response.body();
 
-      if (!response.isSuccessful() || body == null) {
+      if (!response.isSuccessful()) {
         throw new IOException("Unsuccessful response: " + response);
       }
 
@@ -337,6 +352,11 @@ public class SubmitDebugLogRepository {
 
       try (Response postResponse = client.newCall(new Request.Builder().url(url).post(post.build()).build()).execute()) {
         if (!postResponse.isSuccessful()) {
+          if (RemoteConfig.internalUser()) {
+            Log.w(TAG, "Internal user failed to upload log: " + postResponse + ", body: " + postResponse.body().string());
+            Log.w(TAG, "debuglogs.org response: " + json.toString(2));
+            Log.w(TAG, "RequestBody length: " + requestBody.contentLength());
+          }
           throw new IOException("Bad response: " + postResponse);
         }
       }
@@ -352,20 +372,30 @@ public class SubmitDebugLogRepository {
   private @NonNull List<LogLine> getPrefixLogLinesInternal() {
     long startTime = System.currentTimeMillis();
 
-    int maxTitleLength = Stream.of(SECTIONS).reduce(0, (max, section) -> Math.max(max, section.getTitle().length()));
+    int maxTitleLength = SECTIONS.stream().reduce(0, (max, section) -> Math.max(max, section.getTitle().length()), Integer::sum);
+
+    List<Future<List<LogLine>>> futures = new ArrayList<>(SECTIONS.size());
+    for (LogSection section : SECTIONS) {
+      futures.add(SignalExecutors.BOUNDED.submit(() -> getLinesForSection(context, section, maxTitleLength)));
+    }
 
     List<LogLine> allLines = new ArrayList<>();
-
-    for (LogSection section : SECTIONS) {
-      List<LogLine> lines = getLinesForSection(context, section, maxTitleLength);
-
-      if (SECTIONS.indexOf(section) != SECTIONS.size() - 1) {
-        for (int i = 0; i < SECTION_SPACING; i++) {
-          lines.add(SimpleLogLine.EMPTY);
-        }
+    for (int i = 0; i < futures.size(); i++) {
+      List<LogLine> lines;
+      try {
+        lines = futures.get(i).get();
+      } catch (InterruptedException | ExecutionException e) {
+        Log.w(TAG, "Failed to read section " + SECTIONS.get(i).getTitle(), e);
+        lines = new ArrayList<>();
       }
 
       allLines.addAll(lines);
+
+      if (i != futures.size() - 1) {
+        for (int j = 0; j < SECTION_SPACING; j++) {
+          allLines.add(SimpleLogLine.EMPTY);
+        }
+      }
     }
 
     List<LogLine> withIds = new ArrayList<>(allLines.size());
@@ -391,8 +421,7 @@ public class SubmitDebugLogRepository {
 
       List<LogLine> lines = Stream.of(Pattern.compile("\\n").split(content))
                                   .map(s -> new SimpleLogLine(s, LogStyleParser.parseStyle(s), LogStyleParser.parsePlaceholderType(s)))
-                                  .map(line -> (LogLine) line)
-                                  .toList();
+                                  .map(line -> (LogLine) line).collect(Collectors.toList());
 
       out.addAll(lines);
     }
@@ -436,9 +465,5 @@ public class SubmitDebugLogRepository {
     }
 
     return stringBuilder;
-  }
-
-  public interface Callback<E> {
-    void onResult(E result);
   }
 }
