@@ -11,30 +11,34 @@ import androidx.annotation.AnyThread;
 import androidx.annotation.NonNull;
 import androidx.annotation.Nullable;
 
-import com.annimon.stream.Stream;
-
 import org.greenrobot.eventbus.EventBus;
+import org.signal.core.models.ServiceId.ACI;
+import org.signal.core.util.AppForegroundObserver;
+import org.signal.core.util.Util;
+import org.signal.core.util.concurrent.KeyedSerialMonoLifoExecutor;
 import org.signal.core.util.concurrent.SignalExecutors;
 import org.signal.core.util.logging.Log;
-import org.signal.libsignal.protocol.util.Pair;
+import org.signal.libsignal.protocol.NoSessionException;
 import org.signal.libsignal.zkgroup.GenericServerPublicParams;
 import org.signal.libsignal.zkgroup.InvalidInputException;
 import org.signal.libsignal.zkgroup.VerificationFailedException;
 import org.signal.libsignal.zkgroup.calllinks.CallLinkAuthCredentialPresentation;
 import org.signal.libsignal.zkgroup.calllinks.CallLinkSecretParams;
 import org.signal.libsignal.zkgroup.groups.GroupIdentifier;
+import org.signal.network.NetworkResult;
 import org.signal.ringrtc.CallException;
 import org.signal.ringrtc.CallId;
-import org.signal.ringrtc.CallLinkEpoch;
 import org.signal.ringrtc.CallLinkRootKey;
 import org.signal.ringrtc.CallManager;
+import org.signal.ringrtc.CallSummary;
 import org.signal.ringrtc.GroupCall;
 import org.signal.ringrtc.GroupCall.Reaction;
 import org.signal.ringrtc.HttpHeader;
 import org.signal.ringrtc.NetworkRoute;
 import org.signal.ringrtc.PeekInfo;
 import org.signal.ringrtc.Remote;
-import org.signal.storageservice.protos.groups.GroupExternalCredential;
+import org.signal.storageservice.storage.protos.groups.ExternalGroupCredential;
+import org.thoughtcrime.securesms.calls.quality.CallQuality;
 import org.thoughtcrime.securesms.components.webrtc.v2.CallIntent;
 import org.thoughtcrime.securesms.crypto.SealedSenderAccessUtil;
 import org.thoughtcrime.securesms.database.CallLinkTable;
@@ -67,17 +71,13 @@ import org.thoughtcrime.securesms.service.webrtc.links.CallLinkRoomId;
 import org.thoughtcrime.securesms.service.webrtc.links.SignalCallLinkManager;
 import org.thoughtcrime.securesms.service.webrtc.state.WebRtcEphemeralState;
 import org.thoughtcrime.securesms.service.webrtc.state.WebRtcServiceState;
-import org.thoughtcrime.securesms.util.AppForegroundObserver;
 import org.thoughtcrime.securesms.util.RecipientAccessList;
-import org.thoughtcrime.securesms.util.RemoteConfig;
 import org.thoughtcrime.securesms.util.TextSecurePreferences;
-import org.thoughtcrime.securesms.util.Util;
 import org.thoughtcrime.securesms.util.rx.RxStore;
 import org.thoughtcrime.securesms.webrtc.CallNotificationBuilder;
 import org.thoughtcrime.securesms.webrtc.audio.SignalAudioManager;
 import org.thoughtcrime.securesms.webrtc.locks.LockManager;
 import org.webrtc.PeerConnection;
-import org.whispersystems.signalservice.api.NetworkResult;
 import org.whispersystems.signalservice.api.NetworkResultUtil;
 import org.whispersystems.signalservice.api.crypto.SealedSenderAccess;
 import org.whispersystems.signalservice.api.crypto.UntrustedIdentityException;
@@ -88,12 +88,12 @@ import org.whispersystems.signalservice.api.messages.calls.OpaqueMessage;
 import org.whispersystems.signalservice.api.messages.calls.SignalServiceCallMessage;
 import org.whispersystems.signalservice.api.messages.calls.TurnServerInfo;
 import org.whispersystems.signalservice.api.messages.multidevice.SignalServiceSyncMessage;
-import org.whispersystems.signalservice.api.push.ServiceId.ACI;
 import org.whispersystems.signalservice.api.push.exceptions.ProofRequiredException;
 import org.whispersystems.signalservice.api.push.exceptions.UnregisteredUserException;
 import org.whispersystems.signalservice.internal.push.SyncMessage;
 
 import java.io.IOException;
+import java.time.Instant;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
@@ -105,7 +105,6 @@ import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
 import java.util.UUID;
-import java.util.concurrent.Executor;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.function.Consumer;
@@ -113,6 +112,7 @@ import java.util.stream.Collectors;
 
 import io.reactivex.rxjava3.core.Flowable;
 import io.reactivex.rxjava3.schedulers.Schedulers;
+import kotlin.Pair;
 import kotlin.jvm.functions.Function1;
 import kotlin.text.Charsets;
 
@@ -135,10 +135,10 @@ public final class SignalCallManager implements CallManager.Observer, GroupCall.
 
   @Nullable private final CallManager callManager;
 
-  private final Context         context;
-  private final ExecutorService serviceExecutor;
-  private final Executor        networkExecutor;
-  private final LockManager     lockManager;
+  private final Context                     context;
+  private final ExecutorService             serviceExecutor;
+  private final KeyedSerialMonoLifoExecutor keyedExecutor;
+  private final LockManager                 lockManager;
 
   private WebRtcServiceState            serviceState;
   private RxStore<WebRtcEphemeralState> ephemeralStateStore;
@@ -150,7 +150,7 @@ public final class SignalCallManager implements CallManager.Observer, GroupCall.
     this.context             = application.getApplicationContext();
     this.lockManager         = new LockManager(this.context);
     this.serviceExecutor     = Executors.newSingleThreadExecutor();
-    this.networkExecutor     = Executors.newSingleThreadExecutor();
+    this.keyedExecutor       = new KeyedSerialMonoLifoExecutor(SignalExecutors.BOUNDED_IO);
     this.ephemeralStateStore = new RxStore<>(new WebRtcEphemeralState(), Schedulers.from(serviceExecutor));
     this.linkPeekInfoStore   = new RxStore<>(new HashMap<>(), Schedulers.from(serviceExecutor));
 
@@ -217,6 +217,8 @@ public final class SignalCallManager implements CallManager.Observer, GroupCall.
       if (previous != serviceState) {
         if (serviceState.getCallInfoState().getCallState() != WebRtcViewModel.State.IDLE) {
           postStateUpdate(serviceState);
+        } else if (previous.getCallInfoState().getCallState() != WebRtcViewModel.State.IDLE) {
+          EventBus.getDefault().removeStickyEvent(WebRtcViewModel.class);
         }
       }
     });
@@ -262,6 +264,22 @@ public final class SignalCallManager implements CallManager.Observer, GroupCall.
 
   public void setEnableVideo(boolean enabled) {
     process((s, p) -> p.handleSetEnableVideo(s, enabled));
+  }
+
+  public void startScreenShare(@NonNull android.content.Intent mediaProjectionData) {
+    process((s, p) -> p.handleSetLocalScreenShare(s, true, mediaProjectionData));
+  }
+
+  public void stopScreenShare() {
+    process((s, p) -> p.handleSetLocalScreenShare(s, false, null));
+  }
+
+  public void onScreenSharingServiceReady() {
+    process((s, p) -> p.handleScreenSharingServiceReady(s));
+  }
+
+  public void setIncomingRingingVanity(boolean enabled) {
+    process((s, p) -> p.handleSetIncomingRingingVanity(s, enabled));
   }
 
   public void flipCamera() {
@@ -358,6 +376,10 @@ public final class SignalCallManager implements CallManager.Observer, GroupCall.
     process((s, p) -> p.handleAudioDeviceChanged(s, activeDevice, availableDevices));
   }
 
+  public void onAudioDeviceChangeFailed() {
+    process((s, p) -> p.handleAudioDeviceChangeFailed(s));
+  }
+
   public void onBluetoothPermissionDenied() {
     process((s, p) -> p.handleBluetoothPermissionDenied(s));
   }
@@ -382,6 +404,10 @@ public final class SignalCallManager implements CallManager.Observer, GroupCall.
     process((s, p) -> p.handleSetCallLinkJoinRequestRejected(s, participant));
   }
 
+  public void sendRemoteMuteRequest(@NonNull CallParticipant participant) {
+    process((s, p) -> p.handleSendRemoteMuteRequest(s, participant));
+  }
+
   public void removeFromCallLink(@NonNull CallParticipant participant) {
     process((s, p) -> p.handleRemoveFromCallLink(s, participant));
   }
@@ -396,7 +422,7 @@ public final class SignalCallManager implements CallManager.Observer, GroupCall.
       return;
     }
 
-    networkExecutor.execute(() -> {
+    keyedExecutor.execute(id.toString(), () -> {
       try {
         Recipient              callLinkRecipient = Recipient.resolved(id);
         CallLinkRoomId         callLinkRoomId    = callLinkRecipient.requireCallLinkRoomId();
@@ -408,7 +434,6 @@ public final class SignalCallManager implements CallManager.Observer, GroupCall.
         }
 
         CallLinkRootKey           callLinkRootKey           = new CallLinkRootKey(callLink.getCredentials().getLinkKeyBytes());
-        CallLinkEpoch             callLinkEpoch             = callLink.getCredentials().getEpoch();
         GenericServerPublicParams genericServerPublicParams = new GenericServerPublicParams(AppDependencies.getSignalServiceNetworkAccess()
                                                                                                            .getConfiguration()
                                                                                                            .getGenericServerPublicParams());
@@ -420,7 +445,7 @@ public final class SignalCallManager implements CallManager.Observer, GroupCall.
                                                                                                    CallLinkSecretParams.deriveFromRootKey(callLinkRootKey.getKeyBytes())
                                                                                                );
 
-        callManager.peekCallLinkCall(SignalStore.internal().getGroupCallingServer(), callLinkAuthCredentialPresentation.serialize(), callLinkRootKey, callLinkEpoch, peekInfo -> {
+        callManager.peekCallLinkCall(SignalStore.internal().getGroupCallingServer(), callLinkAuthCredentialPresentation.serialize(), callLinkRootKey, peekInfo -> {
           PeekInfo info = peekInfo.getValue();
           if (info == null) {
             Log.w(TAG, "Failed to get peek info: " + peekInfo.getStatus());
@@ -461,15 +486,14 @@ public final class SignalCallManager implements CallManager.Observer, GroupCall.
       return;
     }
 
-    networkExecutor.execute(() -> {
+    keyedExecutor.execute(id.toString(), () -> {
       try {
         Recipient               group      = Recipient.resolved(id);
         GroupId.V2              groupId    = group.requireGroupId().requireV2();
-        GroupExternalCredential credential = GroupManager.getGroupExternalCredential(context, groupId);
+        ExternalGroupCredential credential = GroupManager.getExternalGroupCredential(context, groupId);
 
-        List<GroupCall.GroupMemberInfo> members = Stream.of(GroupManager.getUuidCipherTexts(context, groupId))
-                                                        .map(entry -> new GroupCall.GroupMemberInfo(entry.getKey(), entry.getValue().serialize()))
-                                                        .toList();
+        List<GroupCall.GroupMemberInfo> members = GroupManager.getUuidCipherTexts(context, groupId).entrySet().stream()
+                                                              .map(entry -> new GroupCall.GroupMemberInfo(entry.getKey(), entry.getValue().serialize())).collect(Collectors.toList());
         callManager.peekGroupCall(SignalStore.internal().getGroupCallingServer(), credential.token.getBytes(Charsets.UTF_8), members, peekInfo -> {
           Long threadId = SignalDatabase.threads().getThreadIdFor(group.getId());
 
@@ -501,11 +525,11 @@ public final class SignalCallManager implements CallManager.Observer, GroupCall.
       return;
     }
 
-    networkExecutor.execute(() -> {
+    keyedExecutor.execute("Call::" + info.getRecipientId(), () -> {
       try {
         Recipient               group      = Recipient.resolved(info.getRecipientId());
         GroupId.V2              groupId    = group.requireGroupId().requireV2();
-        GroupExternalCredential credential = GroupManager.getGroupExternalCredential(context, groupId);
+        ExternalGroupCredential credential = GroupManager.getExternalGroupCredential(context, groupId);
 
         List<GroupCall.GroupMemberInfo> members = GroupManager.getUuidCipherTexts(context, groupId)
                                                               .entrySet()
@@ -524,16 +548,16 @@ public final class SignalCallManager implements CallManager.Observer, GroupCall.
   }
 
   void requestGroupMembershipToken(@NonNull GroupId.V2 groupId, int groupCallHashCode) {
-    networkExecutor.execute(() -> {
+    SignalExecutors.BOUNDED_IO.execute(() -> {
       try {
-        GroupExternalCredential credential = GroupManager.getGroupExternalCredential(context, groupId);
+        ExternalGroupCredential credential = GroupManager.getExternalGroupCredential(context, groupId);
         process((s, p) -> p.handleGroupMembershipProofResponse(s, groupCallHashCode, credential.token.getBytes(Charsets.UTF_8)));
       } catch (IOException e) {
         Log.w(TAG, "Unable to get group membership proof from service", e);
-        process((s, p) -> p.handleGroupCallEnded(s, groupCallHashCode, GroupCall.GroupCallEndReason.SFU_CLIENT_FAILED_TO_JOIN));
+        process((s, p) -> p.handleGroupCallEnded(s, groupCallHashCode, CallManager.CallEndReason.SFU_CLIENT_FAILED_TO_JOIN));
       } catch (VerificationFailedException e) {
         Log.w(TAG, "Unable to verify group membership proof", e);
-        process((s, p) -> p.handleGroupCallEnded(s, groupCallHashCode, GroupCall.GroupCallEndReason.DEVICE_EXPLICITLY_DISCONNECTED));
+        process((s, p) -> p.handleGroupCallEnded(s, groupCallHashCode, CallManager.CallEndReason.DEVICE_EXPLICITLY_DISCONNECTED));
       }
     });
   }
@@ -586,6 +610,90 @@ public final class SignalCallManager implements CallManager.Observer, GroupCall.
   }
 
   @Override
+  public void onCallEnded(@Nullable Remote remote, @NonNull CallManager.CallEndReason reason, @NonNull CallSummary summary) {
+    if (callManager == null) {
+      Log.w(TAG, "Unable to process call end, call manager is not initialized");
+      return;
+    }
+
+    if (!(remote instanceof RemotePeer)) {
+      return;
+    }
+
+    process((s, p) -> {
+      RemotePeer remotePeer = (RemotePeer) remote;
+      if (s.getCallInfoState().getPeer(remotePeer.hashCode()) == null) {
+        Log.w(TAG, "remotePeer not found in map with key: " + remotePeer.hashCode() + "! Dropping.");
+        try {
+          callManager.drop(remotePeer.getCallId());
+        } catch (CallException e) {
+          return p.callFailure(s, "callManager.drop() failed: ", e);
+        }
+        return s;
+      }
+
+      Log.i(TAG, "onCallEnded(): call_id: " + remotePeer.getCallId() + ", state: " + remotePeer.getState() + ", reason: " + reason);
+
+      if (s.getCallInfoState().getGroupCall() != null) {
+        Log.i(TAG, "onCallEnded(): call_id: bypassing call summary handling for group call, this is handled in onEnded(groupCall, ...)");
+      } else {
+        boolean     hasRemoteVideoContent = s.getCallInfoState()
+                                             .getRemoteCallParticipants()
+                                             .stream()
+                                             .anyMatch(participant -> participant.isVideoEnabled() || participant.isScreenSharing());
+
+        CameraState cameraState          = s.getLocalDeviceState().getCameraState();
+        boolean     isLocalVideoEnabled  = cameraState.isEnabled() && cameraState.getCameraCount() > 0;
+
+        CallQuality.handleOneToOneCallSummary(summary, hasRemoteVideoContent || isLocalVideoEnabled);
+      }
+
+      switch (reason) {
+        case LOCAL_HANGUP:
+          Log.i(TAG, "Ignoring end reason: " + reason);
+          break;
+        case REMOTE_HANGUP:
+        case REMOTE_HANGUP_NEED_PERMISSION:
+        case REMOTE_HANGUP_ACCEPTED:
+        case REMOTE_HANGUP_DECLINED:
+        case REMOTE_HANGUP_BUSY:
+        case REMOTE_BUSY:
+        case REMOTE_GLARE:
+        case REMOTE_RECALL:
+          return p.handleEndedRemote(s, reason, remotePeer);
+        case TIMEOUT:
+        case INTERNAL_FAILURE:
+        case SIGNALING_FAILURE:
+        case CONNECTION_FAILURE:
+          return p.handleEnded(s, reason, remotePeer);
+        case APP_DROPPED_CALL:
+          Log.i(TAG, "Ignoring end reason: " + reason);
+          break;
+        case DEVICE_EXPLICITLY_DISCONNECTED:
+        case SERVER_EXPLICITLY_DISCONNECTED:
+        case DENIED_REQUEST_TO_JOIN_CALL:
+        case REMOVED_FROM_CALL:
+        case CALL_MANAGER_IS_BUSY:
+        case SFU_CLIENT_FAILED_TO_JOIN:
+        case FAILED_TO_CREATE_PEER_CONNECTION_FACTORY:
+        case FAILED_TO_NEGOTIATE_SRTP_KEYS:
+        case FAILED_TO_CREATE_PEER_CONNECTION:
+        case FAILED_TO_START_PEER_CONNECTION:
+        case FAILED_TO_UPDATE_PEER_CONNECTION:
+        case FAILED_TO_SET_MAX_SEND_BITRATE:
+        case ICE_FAILED_WHILE_CONNECTING:
+        case ICE_FAILED_AFTER_CONNECTED:
+        case SERVER_CHANGED_DEMUXID:
+        case HAS_MAX_DEVICES:
+        default:
+          throw new AssertionError("Unexpected end reason: " + reason);
+      }
+
+      return s;
+    });
+  }
+
+  @Override
   public void onCallEvent(@Nullable Remote remote, @NonNull CallManager.CallEvent event) {
     if (callManager == null) {
       Log.w(TAG, "Unable to process call event, call manager is not initialized");
@@ -633,35 +741,17 @@ public final class SignalCallManager implements CallManager.Observer, GroupCall.
           return p.handleScreenSharingEnable(s, true);
         case REMOTE_SHARING_SCREEN_DISABLE:
           return p.handleScreenSharingEnable(s, false);
-        case ENDED_REMOTE_HANGUP:
-        case ENDED_REMOTE_HANGUP_NEED_PERMISSION:
-        case ENDED_REMOTE_HANGUP_ACCEPTED:
-        case ENDED_REMOTE_HANGUP_BUSY:
-        case ENDED_REMOTE_HANGUP_DECLINED:
-        case ENDED_REMOTE_BUSY:
-        case ENDED_REMOTE_GLARE:
-        case ENDED_REMOTE_RECALL:
-          return p.handleEndedRemote(s, event, remotePeer);
-        case ENDED_TIMEOUT:
-        case ENDED_INTERNAL_FAILURE:
-        case ENDED_SIGNALING_FAILURE:
-        case ENDED_GLARE_HANDLING_FAILURE:
-        case ENDED_CONNECTION_FAILURE:
-          return p.handleEnded(s, event, remotePeer);
+        case GLARE_HANDLING_FAILURE:
+          // Something broke when handling glare, end as an internal failure.
+          return p.handleEnded(s, CallManager.CallEndReason.INTERNAL_FAILURE, remotePeer);
         case RECEIVED_OFFER_EXPIRED:
           return p.handleReceivedOfferExpired(s, remotePeer);
         case RECEIVED_OFFER_WHILE_ACTIVE:
         case RECEIVED_OFFER_WITH_GLARE:
           return p.handleReceivedOfferWhileActive(s, remotePeer);
-        case ENDED_LOCAL_HANGUP:
-        case ENDED_APP_DROPPED_CALL:
-          Log.i(TAG, "Ignoring event: " + event);
-          break;
         default:
           throw new AssertionError("Unexpected event: " + event);
       }
-
-      return s;
     });
   }
 
@@ -791,7 +881,7 @@ public final class SignalCallManager implements CallManager.Observer, GroupCall.
     OpaqueMessage            opaqueMessage = new OpaqueMessage(message, getUrgencyFromCallUrgency(urgency));
     SignalServiceCallMessage callMessage   = SignalServiceCallMessage.forOpaque(opaqueMessage, null);
 
-    networkExecutor.execute(() -> {
+    SignalExecutors.BOUNDED_IO.execute(() -> {
       Recipient recipient = Recipient.resolved(RecipientId.from(ACI.from(aciUuid)));
       if (recipient.isBlocked()) {
         return;
@@ -813,6 +903,10 @@ public final class SignalCallManager implements CallManager.Observer, GroupCall.
       } catch (IOException e) {
         Log.i(TAG, "onSendCallMessage onFailure: ", e);
         process((s, p) -> p.handleGroupMessageSentError(s, Collections.singletonList(recipient.getId()), NETWORK_FAILURE));
+      } catch (NoSessionException e) {
+        Log.w(TAG, "onSendCallMessage onFailure: missing or corrupt session. Archiving sessions so the next send rebuilds.", e);
+        archiveSessions(recipient.getId());
+        process((s, p) -> p.handleGroupMessageSentError(s, Collections.singletonList(recipient.getId()), NETWORK_FAILURE));
       }
     });
   }
@@ -821,7 +915,7 @@ public final class SignalCallManager implements CallManager.Observer, GroupCall.
   public void onSendCallMessageToGroup(@NonNull byte[] groupIdBytes, @NonNull byte[] message, @NonNull CallManager.CallMessageUrgency urgency, @NonNull List<UUID> overrideRecipients) {
     Log.i(TAG, "onSendCallMessageToGroup():");
 
-    networkExecutor.execute(() -> {
+    SignalExecutors.BOUNDED_IO.execute(() -> {
       try {
         GroupId         groupId    = GroupId.v2(new GroupIdentifier(groupIdBytes));
         List<Recipient> recipients = SignalDatabase.groups().getGroupMembers(groupId, GroupTable.MemberSet.FULL_MEMBERS_EXCLUDING_SELF);
@@ -858,10 +952,15 @@ public final class SignalCallManager implements CallManager.Observer, GroupCall.
 
           RetrieveProfileJob.enqueue(identifyFailureRecipientIds, true);
         }
-      } catch (UntrustedIdentityException | IOException | InvalidInputException e) {
+      } catch (UntrustedIdentityException | IOException | InvalidInputException | NoSessionException e) {
         Log.w(TAG, "onSendCallMessageToGroup failed", e);
       }
     });
+  }
+
+  @Override
+  public void onSendCallMessageToAdhocGroup(@NonNull byte[] message, @NonNull CallManager.CallMessageUrgency urgency, Instant expiration, @NonNull Map<UUID, byte[]> recipientsToEndorsements) {
+    Log.w(TAG, "onSendCallMessageToAdhocGroup(): not handled yet!");
   }
 
   @Override
@@ -872,12 +971,11 @@ public final class SignalCallManager implements CallManager.Observer, GroupCall.
     }
 
     Log.i(TAG, "onSendHttpRequest(): request_id: " + requestId);
-    networkExecutor.execute(() -> {
+    SignalExecutors.BOUNDED_IO.execute(() -> {
       List<Pair<String, String>> headerPairs;
       if (headers != null) {
-        headerPairs = Stream.of(headers)
-                            .map(header -> new Pair<>(header.getName(), header.getValue()))
-                            .toList();
+        headerPairs = headers.stream()
+                             .map(header -> new Pair<>(header.getName(), header.getValue())).collect(Collectors.toList());
       } else {
         headerPairs = Collections.emptyList();
       }
@@ -910,11 +1008,12 @@ public final class SignalCallManager implements CallManager.Observer, GroupCall.
       if (group != null &&
           group.isActive() &&
           !Recipient.resolved(group.getRecipientId()).isBlocked() &&
+          group.memberLevel(senderRecipient).isInGroup() &&
           (!group.isAnnouncementGroup() || group.isAdmin(senderRecipient)))
       {
         process((s, p) -> p.handleGroupCallRingUpdate(s, new RemotePeer(group.getRecipientId()), groupId, ringId, senderAci, ringUpdate));
       } else {
-        Log.w(TAG, "Unable to ring unknown/inactive/blocked group.");
+        Log.w(TAG, "Unable to ring unknown/inactive/blocked group, or sender is not a current member of the group.");
       }
     } catch (InvalidInputException e) {
       Log.w(TAG, "Unable to ring group due to invalid group id", e);
@@ -969,14 +1068,14 @@ public final class SignalCallManager implements CallManager.Observer, GroupCall.
   }
 
   @Override
-  public void onEnded(@NonNull GroupCall groupCall, @NonNull GroupCall.GroupCallEndReason groupCallEndReason) {
-    process((s, p) -> p.handleGroupCallEnded(s, groupCall.hashCode(), groupCallEndReason));
+  public void onEnded(@NonNull GroupCall groupCall, @NonNull CallManager.CallEndReason reason, @NonNull CallSummary summary) {
+    CallQuality.handleGroupCallSummary(summary, groupCall.getKind());
+    process((s, p) -> p.handleGroupCallEnded(s, groupCall.hashCode(), reason));
   }
 
   @Override
   public void onRemoteMuteRequest(@NonNull GroupCall groupCall, long sourceDemuxId) {
     process((s, p) -> p.handleRemoteMuteRequest(s, sourceDemuxId));
-
   }
 
   @Override
@@ -1006,6 +1105,11 @@ public final class SignalCallManager implements CallManager.Observer, GroupCall.
   }
 
   @Override
+  public void onScreenShareStopped() {
+    stopScreenShare();
+  }
+
+  @Override
   public void onForeground() {
     process((s, p) -> {
       WebRtcViewModel.State          callState      = s.getCallInfoState().getCallState();
@@ -1028,7 +1132,7 @@ public final class SignalCallManager implements CallManager.Observer, GroupCall.
       CallTable.Type type = isVideoOffer ? CallTable.Type.VIDEO_CALL : CallTable.Type.AUDIO_CALL;
 
       SignalDatabase.calls()
-                    .insertOneToOneCall(remotePeer.getCallId().longValue(), timestamp, remotePeer.getId(), type, CallTable.Direction.INCOMING, missedEvent);
+                    .insertOneToOneCall(remotePeer.getCallId().longValue(), timestamp, remotePeer.getId(), type, CallTable.Direction.INCOMING, missedEvent, false);
     }
   }
 
@@ -1040,12 +1144,12 @@ public final class SignalCallManager implements CallManager.Observer, GroupCall.
       CallTable.Type type = isVideoOffer ? CallTable.Type.VIDEO_CALL : CallTable.Type.AUDIO_CALL;
 
       SignalDatabase.calls()
-                    .insertOneToOneCall(remotePeer.getCallId().longValue(), System.currentTimeMillis(), remotePeer.getId(), type, CallTable.Direction.INCOMING, CallTable.Event.ACCEPTED);
+                    .insertOneToOneCall(remotePeer.getCallId().longValue(), System.currentTimeMillis(), remotePeer.getId(), type, CallTable.Direction.INCOMING, CallTable.Event.ACCEPTED, false);
     }
   }
 
   public void retrieveTurnServers(@NonNull RemotePeer remotePeer) {
-    networkExecutor.execute(() -> {
+    SignalExecutors.BOUNDED_IO.execute(() -> {
       try {
         List<PeerConnection.IceServer> cachedServers = TurnServerCache.getCachedServers();
         if (cachedServers != null) {
@@ -1194,7 +1298,7 @@ public final class SignalCallManager implements CallManager.Observer, GroupCall.
   public void sendCallMessage(@NonNull final RemotePeer remotePeer,
                               @NonNull final SignalServiceCallMessage callMessage)
   {
-    networkExecutor.execute(() -> {
+    SignalExecutors.BOUNDED_IO.execute(() -> {
       Recipient recipient = Recipient.resolved(remotePeer.getId());
       if (recipient.isBlocked()) {
         return;
@@ -1224,8 +1328,21 @@ public final class SignalCallManager implements CallManager.Observer, GroupCall.
                                                                                         remotePeer.getCallId(),
                                                                                         e instanceof UnregisteredUserException ? NO_SUCH_USER : NETWORK_FAILURE,
                                                                                         Optional.empty()));
+      } catch (NoSessionException e) {
+        Log.w(TAG, "sendCallMessage: missing or corrupt session. Archiving sessions so the next send rebuilds.", e);
+        archiveSessions(recipient.getId());
+        processSendMessageFailureWithChangeDetection(remotePeer,
+                                                     (s, p) -> p.handleMessageSentError(s,
+                                                                                        remotePeer.getCallId(),
+                                                                                        NETWORK_FAILURE,
+                                                                                        Optional.empty()));
       }
     });
+  }
+
+  private void archiveSessions(@NonNull RecipientId recipientId) {
+    AppDependencies.getProtocolStore().aci().sessions().archiveSessions(recipientId);
+    AppDependencies.getProtocolStore().pni().sessions().archiveSessions(recipientId);
   }
 
   public void sendAcceptedCallEventSyncMessage(@NonNull RemotePeer remotePeer, boolean isOutgoing, boolean isVideoCall) {
@@ -1234,11 +1351,11 @@ public final class SignalCallManager implements CallManager.Observer, GroupCall.
         .updateOneToOneCall(remotePeer.getCallId().longValue(), CallTable.Event.ACCEPTED);
 
     if (SignalStore.account().isMultiDevice()) {
-      networkExecutor.execute(() -> {
+      SignalExecutors.BOUNDED_IO.execute(() -> {
         try {
           SyncMessage.CallEvent callEvent = CallEventSyncMessageUtil.createAcceptedSyncMessage(remotePeer, System.currentTimeMillis(), isOutgoing, isVideoCall);
           AppDependencies.getSignalServiceMessageSender().sendSyncMessage(SignalServiceSyncMessage.forCallEvent(callEvent));
-        } catch (IOException | UntrustedIdentityException e) {
+        } catch (IOException | UntrustedIdentityException | NoSessionException e) {
           Log.w(TAG, "Unable to send call event sync message for " + remotePeer.getCallId().longValue(), e);
         }
       });
@@ -1251,11 +1368,11 @@ public final class SignalCallManager implements CallManager.Observer, GroupCall.
         .updateOneToOneCall(remotePeer.getCallId().longValue(), CallTable.Event.NOT_ACCEPTED);
 
     if (SignalStore.account().isMultiDevice()) {
-      networkExecutor.execute(() -> {
+      SignalExecutors.BOUNDED_IO.execute(() -> {
         try {
           SyncMessage.CallEvent callEvent = CallEventSyncMessageUtil.createNotAcceptedSyncMessage(remotePeer, System.currentTimeMillis(), isOutgoing, isVideoCall);
           AppDependencies.getSignalServiceMessageSender().sendSyncMessage(SignalServiceSyncMessage.forCallEvent(callEvent));
-        } catch (IOException | UntrustedIdentityException e) {
+        } catch (IOException | UntrustedIdentityException | NoSessionException e) {
           Log.w(TAG, "Unable to send call event sync message for " + remotePeer.getCallId().longValue(), e);
         }
       });
@@ -1264,11 +1381,11 @@ public final class SignalCallManager implements CallManager.Observer, GroupCall.
 
   public void sendGroupCallNotAcceptedCallEventSyncMessage(@NonNull RemotePeer remotePeer, boolean isOutgoing) {
     if (SignalStore.account().isMultiDevice()) {
-      networkExecutor.execute(() -> {
+      SignalExecutors.BOUNDED_IO.execute(() -> {
         try {
           SyncMessage.CallEvent callEvent = CallEventSyncMessageUtil.createNotAcceptedSyncMessage(remotePeer, System.currentTimeMillis(), isOutgoing, true);
           AppDependencies.getSignalServiceMessageSender().sendSyncMessage(SignalServiceSyncMessage.forCallEvent(callEvent));
-        } catch (IOException | UntrustedIdentityException e) {
+        } catch (IOException | UntrustedIdentityException | NoSessionException e) {
           Log.w(TAG, "Unable to send call event sync message for " + remotePeer.getCallId().longValue(), e);
         }
       });
@@ -1277,6 +1394,13 @@ public final class SignalCallManager implements CallManager.Observer, GroupCall.
 
   public @NonNull SignalCallLinkManager getCallLinkManager() {
     return new SignalCallLinkManager(Objects.requireNonNull(callManager));
+  }
+
+  public void addAsset(String assetGroup, byte[] content) throws CallException {
+    if (callManager == null) {
+      throw new CallException("Unable to add asset, call manager is not initialized");
+    }
+    callManager.addAsset(assetGroup, content);
   }
 
   public void relaunchPipOnForeground() {
